# gravchaw

./: LICENSE  README.md  environment.yml
example/: mdf_response_surface.py
example/01_create_gw/: gw_flopy.ipynb
example/02_paper_case2/: par_unc_individual.ipynb
example/03_paper_case3/: par_unc_joint_1.ipynb
example/04_paper_case4/: par_unc_joint_2.ipynb
example/05_paper_case1/: par_unc_head.ipynb
example/06_objective_response_surface/: eval_obj_func.ipynb
example/06_objective_response_surface/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  par_unc_head-checkpoint.ipynb
example/06_objective_response_surface/noisy_surface_one_head_grav/: downsc_freyberg.cbc  downsc_freyberg.dis_top.txt  downsc_freyberg.ic_strt.txt  downsc_freyberg.ims  downsc_freyberg.lst  downsc_freyberg.nam  downsc_freyberg.npf_k.txt  downsc_freyberg.rcha_recharge_10.txt  downsc_freyberg.rcha_recharge_22.txt  downsc_freyberg.rcha_recharge_4.txt  downsc_freyberg.rcha_recharge_7.txt  downsc_freyberg.rcha_recharge_8.txt  downsc_freyberg.sfr  downsc_freyberg.sto  downsc_freyberg.sto_sy.txt  downsc_freyberg.sto_sy.txt.tpl  downsc_freyberg.tdis  forward_run.py  grav.csv  grav.csv.ins  mfsim.nam  mult2model_info.csv  surf_sq8_noise_joint_case4.pst  surf_sq8_noise_joint_case4.rec  surf_sq8_noise_joint_case4.rmr  surf_sq8_noise_joint_case4sweep_in.csv
example/06_objective_response_surface/surf_sq8_noise_joint_case4/: downsc_freyberg.dis  downsc_freyberg.ghb  (+16 more)
gravchaw/: execute_workflow.py  pyproject.toml  version.py
gravchaw/gravchaw/: version.py
gravchaw/models/: gravi4gw_hybrid.py
(+22 files in other folders)
