[build-system]
requires = [
    "setuptools >= 61"
    ]
build-backend = "setuptools.build_meta"

[project]
name = "gravchaw"
authors = [
     {name = "Nazanin Mohammadi", email = "nazanin.mohammadi@unine.ch; mohammadi.naz92@gmail.com"},
	 {name = "Hamzeh Mohammadigheymasi", email = "hmohammadigheymasi@fas.harvard.edu"},
	 {name = "Landon J.S. Halloran", email = "landon.halloran@unine.ch"}
	 
]
description = "An open-source python framework to quantitatively explore the full potential of time-lapse gravity in reducing hydrogeological data gap."
version = "0.1.0"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Intended Audience:: Science/Research",
    "License: OSI Approved :: BSD 3-Clause",
    "Programming Language: Python"
    ]
requires-python = ">=3.8"
dependencies = [
    "flopy",
    "pyemu",
    "numpy",
    "pandas"
]
